# TokyoDoves

./: Cargo.toml  README.md  crates.js  help.html  search-index.js  settings.html  source-files.js  src-files.js
.github/workflows/: rust.yml
implementors/strum/: trait.IntoEnumIterator.js
src/: analysis.rs  collections.rs  error.rs  game.rs  lib.rs  prelude.rs  tools.rs
src/analysis/: board_set.rs  board_value.rs  io.rs
src/collections/: board_set.rs  io.rs
src/prelude/: actions.rs  board.rs  builder.rs  error.rs  game.rs  macros.rs  pieces.rs  shift.rs
src/tokyodoves/: analysis.rs.html  collections.rs.html  error.rs.html  game.rs.html  lib.rs.html  prelude.rs.html  tools.rs.html
src/tools/: board_set.rs  board_value.rs  io.rs
tokyodoves/: all.html  enum.Action.html  enum.BoardDisplayFormat.html  enum.Color.html  enum.Dove.html  enum.GameStatus.html  enum.SurroundedStatus.html  enum.WinnerJudgement.html  fn.color_dove_to_char.html  fn.try_char_to_color_dove.html  index.html  sidebar-items.js  struct.ActionsBwd.html  struct.ActionsBwdIntoIter.html  struct.ActionsBwdIter.html  struct.ActionsFwd.html  struct.ActionsFwdIntoIter.html  struct.ActionsFwdIter.html  struct.Board.html  struct.BoardBuilder.html  struct.BoardDisplay.html  struct.ColorIter.html  struct.DoveIter.html  struct.DoveSet.html  struct.DoveSetIntoIter.html  struct.Game.html  struct.GameRule.html  struct.Rectangle.html  struct.RectangleSize.html  struct.Shift.html  trait.ActionContainer.html
tokyodoves/analysis/: enum.ArgsValidationError.html  enum.BoardValueKind.html  enum.CreateCheckmateTreeWithValueError.html  enum.TreeDisplayFormat.html  fn.compare_board_value.html  fn.create_checkmate_tree.html  fn.create_checkmate_tree_with_value.html  fn.evaluate_board.html  (+12 more)
(+344 files in other folders)
