[package]
name = "tokyodoves"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "yes"
codegen-units = 1


[dependencies]
array-macro = "2.1.5"
strum = "0.24"
strum_macros = "0.24"
thiserror = "1.0"