[package]
name = "tokyodoves"
version = "1.0.0"
authors = ["Smooth Pudding <smooth.pudding.1017@gmail.com>"]
edition = "2021"

description = "A library of an efficient board of Tokyo Doves and associated toolkits"

documentation = "https://docs.rs/tokyodoves/"
homepage = "https://crates.io/crates/tokyodoves"
repository = "https://github.com/mat-der-D/tokyodoves"

readme = "README.md"

keywords = ["bitboard","tokyodoves","boardgame"]
categories = ["game-engines"]
license = "MIT"

[dependencies]
array-macro = "2.1.5"
strum = "0.25"
strum_macros = "0.25"
thiserror = "1.0"

[features]
default = []
game = []
analysis = ["game"]