[package]
name = "tokyodoves"
version = "1.0.1"
authors = ["Smooth Pudding <smooth.pudding.1017@gmail.com>"]
edition = "2021"

description = "A library of an efficient board of Tokyo Doves and associated toolkits"

documentation = "https://docs.rs/tokyodoves/"
homepage = "https://crates.io/crates/tokyodoves"
repository = "https://github.com/mat-der-D/tokyodoves"

readme = "README.md"

keywords = ["bitboard","tokyodoves","boardgame"]
categories = ["game-engines"]
license = "MIT"

[dependencies]
array-macro = "2.1.8"
strum = "0.25.0"
strum_macros = "0.25.3"
thiserror = "1.0.56"

[features]
default = []
game = []
analysis = ["game"]

[package.metadata.docs.rs]
all-features = true